# hidapi-rs

./: Cargo.toml  build.rs
examples/: co2mon.rs  lshid.rs  open_first_device.rs  readhid.rs  static_lifetime_bound.rs
src/: lib.rs
