[package]
name = "hidapi-rusb"
version = "1.3.0"
authors = [
    "Roland Ruckerbauer <roland.rucky@gmail.com>",
    "Osspial <osspial@gmail.com>",
    "Artyom Pavlov <newpavlov@gmail.com>",
	"mberndt123",
	"niklasad1"
]
repository = "https://github.com/joshieDo/hidapi-rs"
description = "Rust-y wrapper around hidapi with rusb backend."
license = "MIT"
keywords = ["hid", "api", "usb","binding", "wrapper"]
build = "build.rs"
links = "hidapi-rusb"
documentation = "https://docs.rs/hidapi-rusb"

[features]
default = ["linux-static-rusb"]
linux-static-libusb = []
linux-static-hidraw = []
linux-static-rusb = ["rusb"]
linux-shared-libusb = []
linux-shared-hidraw = []
illumos-static-libusb = []
illumos-shared-libusb = []

[dependencies]
libc = "0.2"
rusb = { version = "0.9", optional = true }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
